<resources>
    <string name="app_name">BuddyBasket</string>


    <string name="action_cart">Cart</string>

    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="not_member">Not a member ? SignUp now</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_categories">Categories</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_cart">Cart</string>
    <string name="my_account">Account</string>
    <string name="categories">Categories</string>
    <string name="history">History</string>
    <string name="closed">Closed</string>
    <string name="_10_digit_mobile_number">10 digit mobile number</string>
    <string name="todo">TODO</string>
    <string name="enter_mobile_number">enter mobile number</string>
    <string name="enter_your_phone_number_to_proceed">Enter your phone number to proceed</string>
    <string name="login">LOGIN</string>
    <string name="entermobileno">ENTER MOBILE NUMBER</string>
    <string name="continu">CONTINUE</string>
    <string name="sign_up">SIGN UP</string>
    <string name="enter_your_details_for_sign_up">Enter your details for sign up</string>
    <string name="mobile_number">Mobile number</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email_id">Enter Email Id</string>
    <string name="enter_password">Enter Password</string>
    <string name="logout">Logout</string>
    <string name="select_locations">Select Locations</string>
    <string name="address_line_one">Address Line One</string>
    <string name="address_line_two">Address Line Two</string>
    <string name="landmark">LandMark</string>
    <string name="pincode">Pincode</string>
    <string name="add_address">Add Address</string>
    <string name="add_new_address">+ Add New Address</string>
    <string name="delete">Delete</string>
    <string name="select">Select</string>
    <string name="edit">Edit</string>
    <string name="place_order">Place Order</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="update_address">Update Address</string>
    <string name="cart">Cart</string>
    <string name="no_data_available">No Data Available...</string>
    <string name="delivery_charge">Delivery Charge</string>


</resources>