<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.buddy.basket.fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >

        <action
            android:id="@+id/action_navigation_home_to_shopsFragment3"
            app:destination="@id/shopsFragment" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_cart"
            app:destination="@id/navigation_cart" />
    </fragment>

    <fragment
        android:id="@+id/navigation_categories"
        android:name="com.buddy.basket.fragments.CategoriesFragment"
        android:label="@string/title_categories"
        tools:layout="@layout/fragment_categories" />

    <fragment
        android:id="@+id/navigation_myaccount"
        android:name="com.buddy.basket.fragments.AccountFragment"
        android:label="@string/my_account"
        tools:layout="@layout/fragment_myaccount" />
    <fragment
        android:id="@+id/navigation_history"
        android:name="com.buddy.basket.fragments.HistoryFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_history"/>

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.buddy.basket.fragments.CartFragment"
        android:label="@string/title_cart"
        tools:layout="@layout/fragment_cart"/>
    <fragment
        android:id="@+id/restaurantsItemsListFragment"
        android:name="com.buddy.basket.fragments.ItemsListFragment"
        android:label="RestaurantsItemsListFragment"
        tools:layout="@layout/fragment_items_list"/>
    <fragment
        android:id="@+id/shopsFragment"
        android:name="com.buddy.basket.fragments.ShopsFragment"
        android:label="ShopsFragment"
        tools:layout="@layout/fragment_shops_names">
        <action
            android:id="@+id/action_shopsFragment_to_restaurantsItemsListFragment"
            app:destination="@id/restaurantsItemsListFragment" />
    </fragment>
</navigation>